Correct a bug in the freeing of memory in pygi-invoke.c.

When a method with inout arguments is called from Python with
a wrong number of arguments, the system crashs because of an
assertion fail. This patch corrects this behaviour.

https://bugzilla.gnome.org/show_bug.cgi?id=634671